<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.viewmodels.MainViewModel" />
        <variable
            name="constants"
            type="com.udacity.utilities.Constants" />

        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activites.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/downloadImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_baseline_cloud_download_24"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/custom_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadImage">

            <RadioButton
                android:id="@+id/glideRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setDownloadUrl(constants.GLIDE_URL, @string/glide_radio_title, false)}"
                android:text="@string/glide_radio_title" />

            <RadioButton
                android:id="@+id/loadAppRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setDownloadUrl(constants.LOADAPP_URL, @string/loadapp_radio_title, false)}"
                android:text="@string/loadapp_radio_title" />

            <RadioButton
                android:id="@+id/retrofitRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.setDownloadUrl(constants.RETROFIT_URL, @string/retrofit_radio_title, false)}"
                android:text="@string/retrofit_radio_title" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom URl"
                android:onClick="@{() -> viewModel.setDownloadUrl(constants.CUSTOM_URL, viewModel.customUrlString, true)}"
                android:id="@+id/customUrlRadioButton"/>

        </RadioGroup>

        <EditText
            android:id="@+id/customUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@={viewModel.customUrlString}"
            android:inputType="textUri"
            android:visibility="@{viewModel.customUrlRadioButton ? View.VISIBLE : View.GONE}"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/title_activity_detail"/>


        <com.udacity.objects.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:buttonBackgroundColor="@color/colorPrimary"
            app:textColor="@color/white"
            app:buttonLoadingColor="@color/colorPrimaryDark"
            app:circleColor="@color/colorAccent"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>