<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/detail_screen_motion"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activites.DetailActivity"
        tools:showIn="@layout/activity_detail">


        <TextView
            android:id="@+id/titleTextView"
            style="@style/DetailStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            app:layout_constraintBaseline_toBaselineOf="@id/titleNameTextView"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineCenter"
            tools:text="TextView" />

        <TextView
            android:id="@+id/downloadTextView"
            style="@style/DetailStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/statusTextView"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineCenter"
            tools:text="TextView" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/back_button"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/ok"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="@id/guidelineBottom"/>

        <TextView
            android:id="@+id/titleNameTextView"
            style="@style/DetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fileNameTitle"
            app:layout_constraintBottom_toTopOf="@id/statusTextView"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusTextView"
            style="@style/DetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/statusTitle"
            app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            app:layout_constraintStart_toStartOf="@id/guidelineStart" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/start_end_spacing" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/start_end_spacing" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>